# ABS-Simulator

./: ONETWOTHRE.xlsm  README.md  test.py
abs_project/: pyproject.toml
abs_project/notebooks/: main.ipynb
abs_project/src/abs_project/: Test_1.yaml  abs_deal_generator.py  lolazo.yaml  main.ipynb  random_abs_deal.yaml  simulator.py
abs_project/src/abs_project/sim/: engine.py  loader.py  plots.py  scenario_runner.py  utils.py
abs_project/src/data/deals/: AUTOFR_2020-2.yaml  AUTOFR_2021-2.xlsx  AUTOFR_2021-2.yaml  AUTOFR_2022-1.xlsx  AUTOFR_2023-3.yaml  AUTOFR_2024-3.yaml  AUTOFR_2025-1.yaml  AUTOFR_2025-3.yaml  AUTOFR_2026-3.yaml
